@@ -2,105 +2,105 @@ package gartham.c10ver.economy;
 
 import java.math.BigInteger;
 import java.util.ArrayList;
-import java.util.Collection;
 import java.util.Collections;
-import java.util.HashMap;
 import java.util.List;
-import java.util.Map;
 
 import gartham.c10ver.economy.items.ItemBunch;
 
 public class Rewards {
-	private final Map<String, ItemBunch<?>> items;
+	private final List<ItemBunch<?>> items;
 	private final List<Multiplier> multipliers;
 	private final BigInteger cloves;
 
-	public Rewards(Iterable<ItemBunch<?>> items, BigInteger cloves, List<Multiplier> multipliers) {
-		this.items = items instanceof Collection<?> ? new HashMap<>(((Collection<?>) items).size()) : new HashMap<>();
-		for (ItemBunch<?> ib : items)
-			this.items.put(ib.getItem().getItemType(), ib);
-		this.multipliers = multipliers;
-		this.cloves = cloves;
+	public boolean hasCloves() {
+		return cloves != null;
+	}
+
+	private static <T> List<T> toList(T[] arr) {
+		if (arr == null || arr.length == 0)
+			return null;
+		else {
+			List<T> x = new ArrayList<>(arr.length);
+			for (var t : arr)
+				x.add(t);
+			return x;
+		}
+	}
+
+	public Rewards(Iterable<ItemBunch<?>> items, BigInteger cloves, Iterable<Multiplier> multipliers) {
+		if (items == null)
+			this.items = null;
+		else {
+			List<ItemBunch<?>> is = new ArrayList<>();
+			for (var x : items)
+				is.add(x);
+			this.items = is.isEmpty() ? null : is;
+		}
+		if (multipliers == null)
+			this.multipliers = null;
+		else {
+			List<Multiplier> mults = new ArrayList<>();
+			for (var x : multipliers)
+				mults.add(x);
+			this.multipliers = mults.isEmpty() ? null : mults;
+		}
+		this.cloves = cloves == null || cloves.compareTo(BigInteger.ZERO) == 0 ? null : cloves;
 	}
 
 	public Rewards(Iterable<ItemBunch<?>> items, BigInteger cloves, Multiplier... multipliers) {
-		this.items = items instanceof Collection<?> ? new HashMap<>(((Collection<?>) items).size()) : new HashMap<>();
-		for (ItemBunch<?> ib : items)
-			this.items.put(ib.getItem().getItemType(), ib);
-		this.multipliers = new ArrayList<>(multipliers.length);
-		for (Multiplier m : multipliers)
-			this.multipliers.add(m);
-		this.cloves = cloves;
+		this(items, cloves, toList(multipliers));
 	}
 
 	public Rewards(Iterable<ItemBunch<?>> items, BigInteger cloves) {
-		this.items = items instanceof Collection<?> ? new HashMap<>(((Collection<?>) items).size()) : new HashMap<>();
-		for (ItemBunch<?> ib : items)
-			this.items.put(ib.getItem().getItemType(), ib);
-		this.multipliers = Collections.emptyList();
-		this.cloves = cloves;
-	}
-
-	public Rewards(Map<String, ItemBunch<?>> items, BigInteger cloves) {
-		this.items = items;
-		this.multipliers = Collections.emptyList();
-		this.cloves = cloves;
+		this(items, cloves, new Multiplier[0]);
 	}
 
 	public Rewards(ItemBunch<?>[] items, BigInteger cloves) {
-		this.items = new HashMap<>(items.length);
-		for (ItemBunch<?> ib : items)
-			this.items.put(ib.getItem().getItemType(), ib);
-		this.multipliers = Collections.emptyList();
-		this.cloves = cloves;
+		this(items, cloves, new Multiplier[0]);
 	}
 
 	public Rewards(ItemBunch<?>[] items, BigInteger cloves, List<Multiplier> multipliers) {
-		this.items = new HashMap<>(items.length);
-		for (ItemBunch<?> ib : items)
-			this.items.put(ib.getItem().getItemType(), ib);
-		this.multipliers = multipliers;
-		this.cloves = cloves;
+		this(toList(items), cloves, multipliers);
 	}
 
 	public Rewards(ItemBunch<?>[] items, BigInteger cloves, Multiplier... multipliers) {
-		this.items = new HashMap<>(items.length);
-		for (ItemBunch<?> ib : items)
-			this.items.put(ib.getItem().getItemType(), ib);
-		this.multipliers = new ArrayList<>(multipliers.length);
-		for (Multiplier m : multipliers)
-			this.multipliers.add(m);
-		this.cloves = cloves;
+		this(toList(items), cloves, multipliers);
 	}
 
-	public Rewards(Map<String, ItemBunch<?>> items, BigInteger cloves, List<Multiplier> multipliers) {
-		this.items = items;
-		this.multipliers = multipliers;
-		this.cloves = cloves;
+	public Rewards(ItemBunch<?>... items) {
+		this(toList(items), null, (List<Multiplier>) null);
 	}
 
-	public Rewards(Map<String, ItemBunch<?>> items, BigInteger cloves, Multiplier... multipliers) {
-		this.items = items;
-		this.multipliers = new ArrayList<>(multipliers.length);
-		for (Multiplier m : multipliers)
-			this.multipliers.add(m);
-		this.cloves = cloves;
+	public Rewards(Iterable<ItemBunch<?>> items) {
+		this(items, null, (List<Multiplier>) null);
 	}
 
-	public Map<String, ItemBunch<?>> getItems() {
-		return Collections.unmodifiableMap(items);
+	public Rewards(Multiplier... items) {
+		this((Iterable<ItemBunch<?>>) null, null, toList(items));
 	}
 
-	public List<ItemBunch<?>> getItemList() {
-		return new ArrayList<>(items.values());
+	public Rewards(BigInteger cloves) {
+		this((Iterable<ItemBunch<?>>) null, cloves, (List<Multiplier>) null);
+	}
+
+	public boolean hasItems() {
+		return items != null;
+	}
+
+	public List<ItemBunch<?>> getItemsAsList() {
+		return items == null ? List.of() : Collections.unmodifiableList(items);
 	}
 
 	public List<Multiplier> getMultipliers() {
-		return Collections.unmodifiableList(multipliers);
+		return multipliers == null ? List.of() : Collections.unmodifiableList(multipliers);
+	}
+
+	public boolean hasMultipliers() {
+		return multipliers != null;
 	}
 
 	public BigInteger getCloves() {
-		return cloves;
+		return cloves == null ? BigInteger.ZERO : cloves;
 	}
 
 }
